3rd fix for jumping in full screen terminal + more tests for wider characters

--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -72,6 +72,9 @@
 .terminal {
     contain: content;
 }
+html {
+    height: 100%;
+}
 body.terminal {
     min-height: 100vh;
     margin: 0;
