--- a/css/jquery.terminal.css
+++ b/css/jquery.terminal.css
@@ -12,7 +12,7 @@
  * Copyright (c) 2011-2018 Jakub Jankiewicz <http://jcubic.pl>
  * Released under the MIT license
  *
- * Date: Sat, 16 Jun 2018 07:58:16 +0000
+ * Date: Sat, 16 Jun 2018 10:28:17 +0000
  */
 .terminal .terminal-output .format, .cmd .format,
 .cmd .prompt, .cmd .prompt div, .terminal .terminal-output div div{
@@ -71,6 +71,9 @@
 }
 .terminal {
     contain: content;
+}
+html {
+    height: 100%;
 }
 body.terminal {
     min-height: 100vh;
